--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 </head>
 <body>
 
-    <label for="imageSelect">Soulsborne Wallpapers</label>
+    <label for="imageSelect">Soulsborne Artwork</label>
 
     <select id="imageSelect">
-        <option value="image1">Wallpaper 1</option>
-        <option value="image2">Wallpaper 2</option>
-        <option value="image3">Wallpaper 3</option>
-        <option value="image4">Wallpaper 4</option>
-        <option value="image5">Wallpaper 5</option>
+        <option value="image1">Artwork 1</option>
+        <option value="image2">Artwork 2</option>
+        <option value="image3">Artwork 3</option>
+        <option value="image4">Artwork 4</option>
+        <option value="image5">Artwork 5</option>
     </select>
     
-    <br><br>
     
     <div id="imageWrapper">
         <img id="image" src="" alt="Selected image">
